# hashimotos-graph-rag

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
DB-inspection/qdrant/: inspect_qdrant.py  report.md
EDA/: README.md  chunks_eda.ipynb  metadat_eda.ipynb
Test QA/: README.md  ht_medmcqa_relevant-final.json  ht_medqa-final.json  medbullets-final.json  medxpertqa-final.json
chunk_pdf_section/: chunk_pdf_to_sections.py
chunk_pdf_section/config/: chunk_config.py
chunk_pdf_section/utils/: grobid_client.py  md_writer.py  section_extractor.py
data.example/: README.md  metadata.json  pdf-info.json
data.example/paper-sections/: 1.md
deval/: README.md  eval.py  judge.py
extract_entity_relation/: README.md  main.py
extract_entity_relation/config/: extract_entity_relation_config.py
extract_entity_relation/prompts/: extract_entity_prompt.py  extract_relation.py
extract_entity_relation/utils/: clients.py  extractor.py  file_utils.py  gemini_client.py  normalize_entities.py
extract_metadata/: README.md  main.py  notebook.ipynb
extract_metadata/config/: metadata_config.py
extract_metadata/experiment_evaluation/: config.yaml  evaluate.py
extract_metadata/experiments/: metrics_logger.py
extract_metadata/extracted_metadata/: llama3.1latest_extracted_part_1.json
generator/: README.md  generator.py  prompt.py
kg_construction/: README.md  main.py
kg_ingestion/: README.md
pdf_section_chunker/: README.md  extract_figs_tables.py  main.py
retrieval/: RETRIEVER.md  prompt.py  qdrant_neo4j_retriever.py
retriever/: README.md  main.py
(+48 files in other folders)
