[project]
name = "hashimotos-graph-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google>=3.0.0",
    "google-genai>=1.69.0",
    "psutil>=7.2.2",
    "psutils>=3.3.14",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
]
