[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["extract_entity_relation", "pdf_section_chunker", "extract_metadata"]

[project]
name = "hashimotos-graph-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.95.0",
    "google>=3.0.0",
    "google-genai>=1.69.0",
    "numpy>=2.4.4",
    "openai>=2.31.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "psutil>=7.2.2",
    "psutils>=3.3.14",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
]
